# Language-TPP

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
Language_TPP_0___5B/: added_tokens.json  config.json  configuration_langtpp.py  generation_config.json  modeling_langtpp.py  tokenization_langtpp_fast.py  tokenizer_config.json
